force-app/main/default/objects/RTV_RP_SKU_Budget__c/RTV_RP_SKU_Budget__c.object-meta.xml
<CustomObject>
    <description>Return summary of one product.</description>
    <label>RTV RP SKU Budget</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Sku Budget Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTV RP SKU Budget</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>