force-app/main/default/objects/RTV_RP_SKU_Budget__c/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account Group 维度的 Product 预算</description>
    <label>Account Group</label>
    <referenceTo>RMS_Account_Group__c</referenceTo>
    <relationshipLabel>RTV RP SKU Budget</relationshipLabel>
    <relationshipName>RTV_RP_SKU_Budget</relationshipName>
    <type>Lookup</type>
</CustomField>