force-app/main/default/objects/RTV_RP_SKU_Budget__c/fields/Application_MSRP__c.field-meta.xml
<CustomField>
    <fullName>Application_MSRP__c</fullName>
    <label>Application MSRP (CNY/incl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>