force-app/main/default/objects/RTV_RP_SKU_Budget__c/fields/Application_NET__c.field-meta.xml
<CustomField>
    <fullName>Application_NET__c</fullName>
    <label>Application Amount (USD/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>