force-app/main/default/objects/RTV_RP_SKU_Budget__c/fields/Application_QTY__c.field-meta.xml
<CustomField>
    <fullName>Application_QTY__c</fullName>
    <description>申请数量</description>
    <label>Application QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>