force-app/main/default/objects/RTV_RP_SKU_Budget__c/fields/Budget_MSRP__c.field-meta.xml
<CustomField>
    <fullName>Budget_MSRP__c</fullName>
    <description>预算单价合计(人民币)</description>
    <label>Budget MSRP (CNY/incl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>