force-app/main/default/objects/RTV_RP_SKU_Budget__c/fields/Budget_NET__c.field-meta.xml
<CustomField>
    <fullName>Budget_NET__c</fullName>
    <defaultValue>0</defaultValue>
    <description>预算金额($美元)</description>
    <inlineHelpText>Budget Amount ($NET)</inlineHelpText>
    <label>Budget Amount (USD/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>