force-app/main/default/objects/RTV_RP_SKU_Budget__c/fields/Budget_QTY__c.field-meta.xml
<CustomField>
    <fullName>Budget_QTY__c</fullName>
    <description>预算QTY</description>
    <label>Budget QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>