force-app/main/default/objects/RTV_RP_SKU_Budget__c/fields/Is_Global_Sku_Budget__c.field-meta.xml
<CustomField>
    <fullName>Is_Global_Sku_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>没有指定AccountGroup以下范围的SkuBudget</inlineHelpText>
    <label>Is Global Sku Budget</label>
    <type>Checkbox</type>
</CustomField>