force-app/main/default/objects/RTV_RP_SKU_Budget__c/fields/Return_Program__c.field-meta.xml
<CustomField>
    <fullName>Return_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Belong to a return program</description>
    <label>Return Program</label>
    <referenceTo>RTV_Program__c</referenceTo>
    <relationshipLabel>RTV RP SKU Budget</relationshipLabel>
    <relationshipName>RTV_RP_SKU_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>