force-app/main/default/objects/RTV_RP_SKU_Budget__c/fields/RP_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>RP_Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RP Ship To</label>
    <referenceTo>RTV_RP_Ship_To__c</referenceTo>
    <relationshipLabel>RTV RP SKU Budget</relationshipLabel>
    <relationshipName>RTV_RP_SKU_Budget</relationshipName>
    <type>Lookup</type>
</CustomField>