force-app/main/default/objects/RTV_RP_SKU_Budget__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <formula>RP_Ship_To__r.Ship_To__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship-To</label>
    <type>Text</type>
</CustomField>