force-app/main/default/objects/RTV_RP_SKU_Budget__c/fields/SKU_Material_Code__c.field-meta.xml
<CustomField>
    <fullName>SKU_Material_Code__c</fullName>
    <label>Material Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>