force-app/main/default/objects/RTV_RP_SKU_Budget__c/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Sold To 维度的 Product 预算</description>
    <label>Sold-To</label>
    <referenceTo>RMS_Sold_To__c</referenceTo>
    <relationshipLabel>RTV RP SKU Budget</relationshipLabel>
    <relationshipName>RTV_RP_SKU_Budget</relationshipName>
    <type>Lookup</type>
</CustomField>