force-app/main/default/objects/RTV_RP_SKU_Budget__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <description>门店</description>
    <formula>RP_Ship_To__r.Ship_To__r.DTC_Code__c</formula>
    <label>Store</label>
    <type>Text</type>
</CustomField>