force-app/main/default/objects/RTV_RP_SKU_Budget__c/fields/Summary_Budget__c.field-meta.xml
<CustomField>
    <fullName>Summary_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Summary Budget</label>
    <referenceTo>RTV_RP_Summary_Budget__c</referenceTo>
    <relationshipLabel>RTV RP SKU Budget</relationshipLabel>
    <relationshipName>RTV_RP_SKU_Budget</relationshipName>
    <type>Lookup</type>
</CustomField>