force-app/main/default/objects/RTV_RP_SKU_Budget__c/recordTypes/RP_SKU_Budget.recordType-meta.xml
<RecordType>
    <fullName>RP_SKU_Budget</fullName>
    <active>true</active>
    <label>RP SKU Budget</label>
</RecordType>