force-app/main/default/objects/RTV_RP_SKU_Budget__c/listViews/RMS_Baoshang_Team_RTV_RP_SKU_Budget.listView-meta.xml
<ListView>
    <fullName>RMS_Baoshang_Team_RTV_RP_SKU_Budget</fullName>
    <filterScope>Queue</filterScope>
    <label>RMS Baoshang Team</label>
    <queue>RMS_Baoshang_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>